--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Permanente
-spring.datasource.username=root
-spring.datasource.password=Fmartin250814
+spring.datasource.url=jdbc:mysql://192.168.1.22:3306/permanente
+spring.datasource.username=ismael
+spring.datasource.password=Bolsa88!!Orbit.
