--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://192.168.1.22:3306/permanente
-spring.datasource.username=ismael
-spring.datasource.password=Bolsa88!!Orbit.
+spring.datasource.url=jdbc:mysql://194.224.79.42:43306/grup1
+spring.datasource.username=grup1
+spring.datasource.password=Ivan
